[iOS] Don't present IdentityChooser on ConsentBump

The IdentityChooser shouldn't be presented on the ConsentBump as the
identity cannot be changed.

Bug: 878365
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: Icb77657acf922dbd8ad3166e5d7fa32fa93b7e63
Reviewed-on: https://chromium-review.googlesource.com/1193782
Reviewed-by: Jérôme Lebel <jlebel@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586675}
Former-commit-id: fcfebaaa15c2d0666956737d5596ad2af61022a5